@@ -1,5 +1,6 @@
 package net.sf.openrocket.document;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.EventListener;
 import java.util.EventObject;
 import java.util.List;
@@ -64,17 +65,18 @@ public class Simulation implements ChangeSource, Cloneable {
 		CANT_RUN
 	}
 	
-	private RocketDescriptor descriptor = Application.getInjector().getInstance(RocketDescriptor.class);
+	private final RocketDescriptor descriptor = Application.getInjector().getInstance(RocketDescriptor.class);
 	
 	
 	private SafetyMutex mutex = SafetyMutex.newInstance();
-	
+
+	private final OpenRocketDocument document;
 	private final Rocket rocket;
 	FlightConfigurationId configId = FlightConfigurationId.ERROR_FCID;
 	
 	private String name = "";
 	
-	private Status status = Status.NOT_SIMULATED;
+	private Status status;
 	
 	/** The conditions to use */
 	// TODO: HIGH: Change to use actual conditions class??
@@ -87,7 +89,7 @@ public class Simulation implements ChangeSource, Cloneable {
 	private Class<? extends SimulationStepper> simulationStepperClass = RK4SimulationStepper.class;
 	private Class<? extends AerodynamicCalculator> aerodynamicCalculatorClass = BarrowmanCalculator.class;
 	@SuppressWarnings("unused")
-	private Class<? extends MassCalculator> massCalculatorClass = MassCalculator.class;
+	private final Class<? extends MassCalculator> massCalculatorClass = MassCalculator.class;
 	
 	/** Listeners for this object */
 	private List<EventListener> listeners = new ArrayList<EventListener>();
@@ -97,7 +99,7 @@ public class Simulation implements ChangeSource, Cloneable {
 	private SimulationOptions simulatedConditions = null;
 	private String simulatedConfigurationDescription = null;
 	private FlightData simulatedData = null;
-	private int simulatedRocketID = -1;
+	private int simulatedConfigurationID = -1;
 	
 	
 	/**
@@ -106,21 +108,33 @@ public class Simulation implements ChangeSource, Cloneable {
 	 *
 	 * @param rocket	the rocket associated with the simulation.
 	 */
-	public Simulation(Rocket rocket) {
+	public Simulation(OpenRocketDocument document, Rocket rocket) {
+		this.document = document;
 		this.rocket = rocket;
 		this.status = Status.NOT_SIMULATED;
-		
+
 		DefaultSimulationOptionFactory f = Application.getInjector().getInstance(DefaultSimulationOptionFactory.class);
 		options.copyConditionsFrom(f.getDefault());
-		
+
 		FlightConfigurationId fcid = rocket.getSelectedConfiguration().getFlightConfigurationID();
 		setFlightConfigurationId(fcid);
-		
+
 		options.addChangeListener(new ConditionListener());
+		addChangeListener(document);
+	}
+
+	/**
+	 * Create a new simulation for the rocket. Parent document should also be provided.
+	 * The initial motor configuration is taken from the default rocket configuration.
+	 *
+	 * @param rocket	the rocket associated with the simulation.
+	 */
+	public Simulation(Rocket rocket) {
+		this(null, rocket);
 	}
 	
 	
-	public Simulation(Rocket rocket, Status status, String name, SimulationOptions options,
+	public Simulation(OpenRocketDocument document, Rocket rocket, Status status, String name, SimulationOptions options,
 			List<SimulationExtension> extensions, FlightData data) {
 		
 		if (rocket == null)
@@ -131,7 +145,8 @@ public class Simulation implements ChangeSource, Cloneable {
 			throw new IllegalArgumentException("name cannot be null");
 		if (options == null)
 			throw new IllegalArgumentException("options cannot be null");
-		
+
+		this.document = document;
 		this.rocket = rocket;
 
 		if (status == Status.UPTODATE) {
@@ -146,9 +161,11 @@ public class Simulation implements ChangeSource, Cloneable {
 		
 		this.options = options;
 
-		this.setFlightConfigurationId( rocket.getSelectedConfiguration().getFlightConfigurationID());
+		final FlightConfiguration config = rocket.getSelectedConfiguration();
+		this.setFlightConfigurationId(config.getFlightConfigurationID());
 				
 		options.addChangeListener(new ConditionListener());
+		addChangeListener(document);
 		
 		if (extensions != null) {
 			this.simulationExtensions.addAll(extensions);
@@ -159,7 +176,7 @@ public class Simulation implements ChangeSource, Cloneable {
 			simulatedData = data;
 			if (this.status == Status.LOADED) {
 				simulatedConditions = options.clone();
-				simulatedRocketID = rocket.getModID();
+				simulatedConfigurationID = config.getModID();
 			}
 		}
 		
@@ -307,8 +324,10 @@ public class Simulation implements ChangeSource, Cloneable {
 	 */
 	public Status getStatus() {
 		mutex.verify();
-		if (status == Status.UPTODATE || status == Status.LOADED) {
-			if (rocket.getFunctionalModID() != simulatedRocketID || !options.equals(simulatedConditions)) {
+		final FlightConfiguration config = rocket.getFlightConfiguration(this.getId()).clone();
+
+		if (isStatusUpToDate(status)) {
+			if (config.getModID() != simulatedConfigurationID || !options.equals(simulatedConditions)) {
 				status = Status.OUTDATED;
 			}
 		}
@@ -319,8 +338,6 @@ public class Simulation implements ChangeSource, Cloneable {
 			status = Status.CANT_RUN;
 			return status;
 		}
-		
-		FlightConfiguration config = rocket.getFlightConfiguration( this.getId()).clone();
 				
 		//Make sure this simulation has motors.
 		if ( ! config.hasMotors() ){
@@ -329,7 +346,21 @@ public class Simulation implements ChangeSource, Cloneable {
 		
 		return status;
 	}
-	
+
+	/**
+	 * Returns true is the status indicates that the simulation data is up-to-date.
+	 * @param status status of the simulation to check for if its data is up-to-date
+	 */
+	public static boolean isStatusUpToDate(Status status) {
+		return status == Status.UPTODATE || status == Status.LOADED || status == Status.EXTERNAL;
+	}
+
+	/**
+	 * Syncs the modID with its flight configuration.
+	 */
+	public void syncModID() {
+		this.simulatedConfigurationID = getActiveConfiguration().getModID();
+	}
 	
 	
 	/**
@@ -350,13 +381,15 @@ public class Simulation implements ChangeSource, Cloneable {
 			SimulationEngine simulator;
 			
 			try {
-				simulator = simulationEngineClass.newInstance();
+				simulator = simulationEngineClass.getConstructor().newInstance();
 			} catch (InstantiationException e) {
 				throw new IllegalStateException("Cannot instantiate simulator.", e);
 			} catch (IllegalAccessException e) {
 				throw new IllegalStateException("Cannot access simulator instance?! BUG!", e);
+			} catch (InvocationTargetException | NoSuchMethodException e) {
+				throw new RuntimeException(e);
 			}
-			
+
 			SimulationConditions simulationConditions = options.toSimulationConditions();
 			simulationConditions.setSimulation(this);
 			for (SimulationListener l : additionalListeners) {
@@ -373,15 +406,19 @@ public class Simulation implements ChangeSource, Cloneable {
 			simulatedData = simulator.simulate(simulationConditions);
 			t2 = System.currentTimeMillis();
 			log.debug("Simulation: returning from simulator, simulation took " + (t2 - t1) + "ms");
-			
-			// Set simulated info after simulation, will not be set in case of exception
+
+		} catch (SimulationException e) {
+			simulatedData = e.getFlightData();
+			throw e;
+		} finally {
+			// Set simulated info after simulation
 			simulatedConditions = options.clone();
 			simulatedConfigurationDescription = descriptor.format( this.rocket, getId());
-			simulatedRocketID = rocket.getFunctionalModID();
+			simulatedConfigurationID = getActiveConfiguration().getModID();
 			
 			status = Status.UPTODATE;
 			fireChangeEvent();
-		} finally {
+
 			mutex.unlock("simulate");
 		}
 	}
@@ -438,7 +475,7 @@ public class Simulation implements ChangeSource, Cloneable {
 	}
 	
 	/**
-	 * Return true if this simulation contains plotable flight data.
+	 * Return true if this simulation contains plottable flight data.
 	 * 
 	 * @return
 	 */
@@ -477,7 +514,7 @@ public class Simulation implements ChangeSource, Cloneable {
 			copy.simulatedConditions = null;
 			copy.simulatedConfigurationDescription = null;
 			copy.simulatedData = null;
-			copy.simulatedRocketID = -1;
+			copy.simulatedConfigurationID = -1;
 			
 			return copy;
 			
@@ -503,7 +540,7 @@ public class Simulation implements ChangeSource, Cloneable {
 	public Simulation duplicateSimulation(Rocket newRocket) {
 		mutex.lock("duplicateSimulation");
 		try {
-			final Simulation newSim = new Simulation(newRocket);
+			final Simulation newSim = new Simulation(this.document, newRocket);
 			newSim.name = this.name;
 			newSim.configId = this.configId;
 			newSim.options.copyFrom(this.options);
